# rbpico-rickroll

./: LICENSE  payload_rp_gen.py
my_ducky/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
